--- a/HTML5/02_css_js.html
+++ b/HTML5/02_css_js.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <!-- how to apply css in html -->
 
-    <!-- html not case-sestive -->
-
-    <H1>Hello Shubham</H1>
-    <h1>Hello shubham</h1>
+    <h1>Hello this h1 tag here</h1>
 
 
-    <P>asd</P>
-    <p>asdasd</p>
+    <!-- how to apply js in html -->
+     <script src="/ex.js"></script>
 </body>
 </html>
