--- a/css/39_nav_hover.html
+++ b/css/39_nav_hover.html
@@ -38,7 +38,9 @@
         <li class="list">Home
             <ul class="nav">
                 <li>Home 1</li>
-                <li>Home 2</li>
+                <li >Home 2
+                    
+                </li>
                 <li>Home 3</li>
                 <li>Home 4</li>
                 <li>Home 5</li>
