--- a/dancestudio/index.html
+++ b/dancestudio/index.html
@@ -15,23 +15,39 @@
 <body>
     <!-- header start -->
     <header id="Header">
-        <div class="container">
-            <nav class="navbar">
-                <div class="logo">
-                    <img src="/images/logo.png" alt="">
-                </div>
-                <ul class="list">
-                    <li class="navlist"><a href="">Home</a></li>
-                    <li class="navlist"><a href="">Product</a></li>
-                    <li class="navlist"><a href="">Promo</a></li>
-                    <li class="navlist"><a href="">About</a></li>
-                    <li class="navlist"><a href="">Contact</a></li>
-                </ul>
-                <div class="icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </nav>  
+        <div class="nav">
+            <div class="container">
+                <nav class="navbar">
+                    <div class="logo">
+                        <img src="/images/logo.png" height="100%" width="100%" alt="">
+                    </div>
+                    <ul class="list">
+                        <li class="navlist"><a href="" class="navlink">Home</a></li>
+                        <li class="navlist"><a href="" class="navlink">Product</a></li>
+                        <li class="navlist"><a href="" class="navlink">Promo</a></li>
+                        <li class="navlist"><a href="" class="navlink">About</a></li>
+                        <li class="navlist"><a href="" class="navlink">Contact</a></li>
+                    </ul>
+                    <div class="icon">
+                        <i class="fa-solid fa-magnifying-glass search"></i>
+                        <i class="fa-solid fa-bars bar"></i>
+                    </div>
+                </nav>
+            </div>
         </div>
+        <div class="container">
+            <div class="header-content">
+               <div class="col"></div>
+               <div class="col">
+                <h1 class="header-h1">Dance
+                    Studio</h1>
+                <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur
+                    justo eu nunc consequat, dolor mollis.</p>
+                <button class="btn-header">Join now</button>
+               </div>
+            </div>
+        </div>
+
     </header>
     <!-- header end -->
 </body>
