--- a/dancestudio/index.html
+++ b/dancestudio/index.html
@@ -37,19 +37,93 @@
         </div>
         <div class="container">
             <div class="header-content">
-               <div class="col"></div>
-               <div class="col">
-                <h1 class="header-h1">Dance
-                    Studio</h1>
-                <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur
-                    justo eu nunc consequat, dolor mollis.</p>
-                <button class="btn-header">Join now</button>
-               </div>
+                <div class="col"></div>
+                <div class="col">
+                    <h1 class="header-h1">Dance
+                        Studio</h1>
+                    <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consectetur
+                        justo eu nunc consequat, dolor mollis.</p>
+                    <button class="btn-header">Join now</button>
+                </div>
             </div>
         </div>
 
     </header>
     <!-- header end -->
+
+
+    <!-- our Team start -->
+    <section id="ourteam">
+        <div class="bg-color">
+            <div class="container">
+                <div class="our-text">
+                    <h2 class="h2-our">OUR TEAM</h2>
+                    <p class="p-our">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae
+                        vestibulum
+                        vestibulum. </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+
+                        <div class="card-main">
+                            <div class="card-img">
+                                <img src="/images/card1.png" height="100%" width="100%" alt="">
+                            </div>
+                            <div class="card-text">
+                                <h4 class="h4-card">Ethel Hunter</h4>
+                                <p class="p-card">Co-Founder</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-main">
+                            <div class="card-img">
+                                <img src="/images/card2.png" height="100%" width="100%" alt="">
+                            </div>
+                            <div class="card-text">
+                                <h4 class="h4-card">Aiden Ramsey</h4>
+                                <p class="p-card">Founder</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-main">
+                            <div class="card-img">
+                                <img src="/images/card3.png" height="100%" width="100%" alt="">
+                            </div>
+                            <div class="card-text">
+                                <h4 class="h4-card">Fannie</h4>
+                                <p class="p-card">Co-Founder</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- our Team end -->
+
+    <!-- dance start -->
+    <section id="dance">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="dance-img">
+                        <img src="/images/dance.png" height="100%" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="dance-main">
+                        <h1 class="h1-dance">Let’s Dance</h1>
+                        <p class="p-dance">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio
+                            vitae vestibulum vestibulum. </p>
+                        <button class="btn-dance">Start now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- dance end -->
 </body>
 
 </html>
