--- a/Javscript/21_sum_form.html
+++ b/Javscript/21_sum_form.html
@@ -27,7 +27,7 @@
         console.log(num1)
 
         function data(){
-            let sum = parseInt(num1.value) + parseInt(num2.value)
+            let sum = parseFloat(num1.value) + parseFloat(num2.value)
             console.log("sum =>",sum)
             // document.getElementById("h1").innerHTML = "sum => "+ sum
             document.getElementById("h1").innerHTML = `sum => ${sum}`
