--- a/Javscript/37_eventlist.html
+++ b/Javscript/37_eventlist.html
@@ -12,8 +12,8 @@
     <button id="btn">change name</button>
 
     <script>
-        let h1_tag = document.getElementById("h1")
-        let btn = document.getElementById("btn")
+        let h1_tag = document.getElementById("h1");
+        let btn = document.getElementById("btn");
 
         // function data(){
         //     h1_tag.innerHTML = "<i>Hello this Addevent lister</i>"
